--- a/service-ingress.yaml
+++ b/service-ingress.yaml
@@ -76,6 +76,8 @@ metadata:
   namespace: ingress-demo
   name: ingress-demo-ingress
   annotations:
+    # this rewrites to serve the domain name only, i.e. http://app1.demo
+    nginx.ingress.kubernetes.io/rewrite-target: /
     # This is important, it links to the ingress-nginx controller
     kubernetes.io/ingress.class: "nginx"
 spec:
